# EC

./: .gitignore  AUTHORS  ArffDataset.h  ChiSquared.h  CleanSnpDataset.cpp  CleanSnpDataset.h  DatasetInstance.cpp  DatasetInstance.h  Debugging.h  DistanceMetrics.h  EC.cpp  EvaporativeCooling.cpp  EvaporativeCooling.h  EvaporativeCoolingCLI.C  FilesystemUtils.cpp  FilesystemUtils.h  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.linux  Makefile.mac  PlinkBinaryDataset.h  PlinkDataset.h  README  README.md  RReliefF.h  RandomJungle.cpp  RandomJungle.h  ReliefF.h  Statistics.cpp  Statistics.h  StringUtils.h  aclocal.m4  best_n.h  bootstrap.sh  config.h  config.h.in  configure  configure.ac  (+2 more)
benchmarks/: .gitignore  RunBenchmarks.py  ec_r50_t10_thor.txt  one_ec_iteration_isaac.txt  run_gwas_benchmark_mac.sh  run_gwas_benchmark_psc.sh  run_gwas_benchmark_thor.sh
doc/: doxygen.cfg
examples/: .gitignore  Makefile.am  Makefile.common  Makefile.in  Makefile.thor  example1.cpp  example1.txt  example1_main.cpp  example2.cpp  example2_main.cpp  example3.bed  example3.bim  example3.cpp  example3.fam  example3.map  example3.ped  example3.txt  example3_main.cpp  example4.bed  example4.bim  example4.cpp  example4.fam  example4_main.cpp
m4/: libxml2.m4  openmp.m4  zlib.m4
nbproject/: Makefile-Default.mk  Makefile-Simple_test.txt.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Default.bash  Package-Simple_test.txt.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
src/: EvaporativeCoolingCLI.cpp  EvaporativeCoolingCLINewAPI.cpp  Makefile.am  Makefile.in
